:bug: Fix overflow

--- a/infinite-gradient.css
+++ b/infinite-gradient.css
@@ -22,6 +22,7 @@ body {
 
 .box {
   overflow: hidden;
+  height: 100vh;
 }
 
 .grad-box {
